Initial check-in.

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,15 @@
 *.exe
 *.out
 *.app
+
+[Bb]in
+[Dd]ebug*/
+*.lib
+*.sbr
+obj/
+[Rr]elease*/
+_ReSharper*/
+[Tt]est[Rr]esult*
+.vs/
+#Nuget packages folder
+packages/
